# meeting-minutes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.example.toml  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  task.yml
.github/workflows/: ci.yml
docs/: cli.md  realtime_meeting_minutes_requirements.md
docs/adr/: 0001-post-process-speaker-diarization.md  0002-record-audio-without-speaker-diarization.md  0003-vocabulary-hints-for-transcription.md  0004-daemon-architecture.md  0005-daemon-csrf-mitigation.md
scripts/raycast/: README.md  serve-start.sh  serve-stop.sh  start.sh  status.sh  stop.sh
src/meeting_minutes/: __init__.py  audio_output.py  audio_stream.py  checks.py  clean.py  cli.py  config.py  dedupe.py  devices.py  errors.py  live.py  live_transcription.py  metadata.py  ollama_client.py  output.py  preprocess.py  prompts.py  summarize.py  transcribe.py  transcript_filter.py  vad.py  vocabulary.py
src/meeting_minutes/audio/: devices.py  preprocess.py
src/meeting_minutes/config/: __init__.py  cli.py
src/meeting_minutes/config/templates/: config.example.toml
src/meeting_minutes/core/: checks.py  metadata.py  output.py
src/meeting_minutes/daemon/: __init__.py  cli.py  client.py  schema.py  server.py  session.py
src/meeting_minutes/minutes/: clean.py  ollama_client.py  prompts.py  summarize.py
src/meeting_minutes/transcription/: dedupe.py  live.py  live_transcription.py  transcribe.py
tests/: conftest.py  test_clean.py  test_config.py  test_config_cli.py  test_daemon_cli.py  test_daemon_client.py  test_daemon_server.py  test_daemon_session.py  test_dedupe.py  test_live.py  test_live_transcription.py  test_metadata.py  test_ollama_client.py  test_output.py  test_preprocess.py  test_smoke.py  test_summarize.py  test_transcribe.py  test_transcript_filter.py  test_vad.py  test_vocabulary.py
