[project]
name = "meeting-minutes"
version = "0.2.0"
description = "Local realtime transcription and meeting minutes CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "faster-whisper>=1.1.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "rich>=13.7.0",
  "sounddevice>=0.4.6",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.29.0",
]

[project.scripts]
meeting-minutes = "meeting_minutes.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D100", "D101", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sounddevice", "faster_whisper", "fastapi", "fastapi.*", "uvicorn", "uvicorn.*", "httpx", "pydantic_settings"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "meeting_minutes.audio.preprocess",
    "meeting_minutes.audio.stream",
    "meeting_minutes.audio.vad",
    "meeting_minutes.audio.writer",
    "meeting_minutes.transcription.live",
    "meeting_minutes.transcription.live_transcription",
    "meeting_minutes.transcription.transcribe",
]
disable_error_code = ["type-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
